# VideoGenAI

./: .gitignore  Dockerfile  Dockerfile.gpu  README-zh.md  README.md  config.example.toml  docker-compose.yml  pyproject.toml  webui.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
app/config/: __init__.py  config.py
app/controllers/: ping.py
app/controllers/manager/: base_manager.py  redis_manager.py
app/controllers/v1/: base.py  video.py
app/models/: schema.py
app/services/: llm.py  material.py  state.py  subtitle.py  task.py  upload_post.py  video.py  voice.py
app/services/utils/: video_effects.py
app/utils/: file_security.py  utils.py
docs/: GPU_DOCKER_DEPLOYMENT.md  PR_MERGE_RECORD_2026-04-02.md  VideoGenAI.ipynb
resource/public/: index.html
test/: README.md
test/services/: __init__.py  test_llm.py  test_material.py  test_state.py  test_task.py  test_video.py  test_voice.py
webui/: Main.py
