# Notes:
# 1. The main dependency source is consolidated into pyproject.toml.
# 2. The runtime environment is pinned by uv.lock so different machines
#    do not resolve different version combinations.
[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "videogenai"
version = "1.2.8"
description = "Generate short videos from prompts, local assets, subtitles, and TTS."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
dependencies = [
    "moviepy==2.1.2",
    "streamlit==1.45.0",
    "edge-tts==7.2.7",
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "openai==1.56.1",
    "faster-whisper==1.1.0",
    "loguru==0.7.3",
    "google-generativeai==0.8.6",
    "dashscope==1.20.14",
    "azure-cognitiveservices-speech==1.41.1",
    "redis==5.2.0",
    "python-multipart==0.0.19",
    "pyyaml==6.0.3",
    "requests==2.33.1",
    "socksio==1.0.0",
    "pydub==0.25.1",
    "litellm==1.60.0",
]

[project.optional-dependencies]
g4f = [
    "g4f==0.5.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# This project mainly runs as an application and is not published as an
# installable Python package.
package = false
